src/main/java/com/example/study/practical_programming/self/bad/concert/domain/SeatStatus.java
package com.example.study.practical_programming.self.bad.concert.domain;

public enum SeatStatus {
    PAID, ON_SALE, HOLD, SOLD;
}
